@@ -9,6 +9,8 @@ require 'action_controller'
 require 'action_controller/cgi_ext'
 require 'action_controller/test_process'
 
+require 'ruby-debug'
+
 # Show backtraces for deprecated behavior for quicker cleanup.
 ActiveSupport::Deprecation.debug = true
 
